src/scss/styles/_fixes.scss
/* – – – - -
FIXES
Fixes aimed at certain browsers or os versions
– – - – - */

/* - - - - 
 
- - - - - */

.hardware-excelerated {
  /* force style to be rendered by the gpu. 
      Implemented to mainly fix filter:drop-shadow issues where drop shadow of .framedOrangeShadow not rendering consistently */
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -ms-transform: translate3d(0, 0, 0);
  -o-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}
/* – – – - -
    iPad ios 14.4 and earlier
    – – - – - */

.column-flexGapFix {
  /* does this need a new name – since this fixes flex items, not just columns */
  @supports (-webkit-touch-callout: none) and (not (translate: none)) {
    & *:not(:last-child) {
      margin-right: clamp(calc($spacer * 1.5), 2%, calc($spacer * 3));
    }
  }
}

.card-flexGapFix {
  @supports (-webkit-touch-callout: none) and (not (translate: none)) {
    margin-bottom: clamp(calc($spacer * 1.5), 5%, calc($spacer * 3)) !important;
    &:not(:last-child) {
      margin-right: clamp(calc($spacer * 1.3), 5%, calc($spacer * 3));
    }
  }
}

/* 
    buttons-flexGapFix was created before the column-flexGapFix. 
    The column-flexGapFix replaces the need for this since wordpress puts buttons inside columns when grouped.
    */
.buttons-flexGapFix {
  /* should only be applied to buttons that are sub of the block-buttons parent */
  @supports (-webkit-touch-callout: none) and (not (translate: none)) {
    & * {
      // margin-right: clamp($spacer, calc($spacer * 1.3), calc($spacer * 3)); /* no longer needed. fixed with is-layout-flex has a column gap fix applied. */
      margin-bottom: clamp($spacer, calc($spacer * 1.3), calc($spacer * 3));
    }
  }
}

// link hover style for smokey background with white link
.wp-block-group.has-smokey-background-color a {
  &:hover,
  &:focus {
    text-decoration: none;
  }
}

.wp-block-column {
  word-break: normal !important;
  /* overrides wp default of break-word which was causing weird orphaned letters */
  overflow-wrap: normal !important;
}

.utkwds-header-fancy-link > .wp-block-columns {
  gap: 60px;
}

// breadcrumbs background when first child has light background
.wp-block-post-content > .has-light-background-color:first-child {
  padding-top: 70px !important;
  margin-top: -50px !important;
}

// zero footer margin, fix last child-margin
footer.site-footer.wp-block-template-part {
  margin-block-start: 0px;
}

.wp-block-post-content > *:last-child,
.wp-block-post-content > .has-white-background-color:last-child {
  margin-bottom: var(--wp--preset--spacing--x-large) !important;
}

.wp-block-post-content>.has-light-background-color:last-child {
  margin-bottom: 0px !important;
}

.wp-block-post-content>.has-smokey-background-color:last-child {
  margin-bottom: 0px !important;
}

.wp-block-post-content>.wp-block-cover.utkwds-sub-footer-link-list:last-child {
  margin-bottom: 0px !important;
}

.wp-block-post-content > .utkwds-gallery:last-child {
  margin-bottom: 0px !important;
}

// fix margin between blocks with background colors

.wp-block-post-content > .wp-block-group:not(
  .has-background, 
  .utkwds-jump-link-group, 
  .tnDivider, 
  .utkwds-content-logform-icon, 
  .utkwds-accordion-group,
  .utkwds-quote-full-base-bar,
  .utkwds-quote-media-full-base-bar,
  .utkwds-gallery
) {
  margin-top: var(--wp--preset--spacing--large);
  margin-bottom: var(--wp--preset--spacing--large);
}

.wp-block-post-content > .has-background:not(.wp-block-media-text) {
  padding-top: var(--wp--preset--spacing--large);
  padding-bottom: var(--wp--preset--spacing--large);
}

.wp-block-post-content > .has-background + .has-background,
.wp-block-post-content > .wp-block-cover + .has-background,
.wp-block-post-content > .has-background + .wp-block-cover,
.wp-block-post-content > .utkwds-quote-full-base-bar + .has-background, 
.wp-block-post-content > .utkwds-quote-media-full-base-bar + .has-background,
.wp-block-post-content > .utkwds-gallery + .has-background {
  margin-block-start: 0px;
}

.wp-block-post-content > .wp-block-cover.utkwds-sub-footer-link-list,
.wp-block-post-content > .wp-block-group.tnDivider {
  margin-block-start: 0px;
}

.wp-block-post-content> .wp-block-media-text.has-background:not(.alignfull, .alignwide) {
  margin-top: var(--wp--preset--spacing--large);
  margin-bottom: var(--wp--preset--spacing--large);
}

